[package]
name = "mt-logic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
mt-logic-io.workspace = true
mt-storage-io.workspace = true
mt-main-io.workspace = true
primitive-types.workspace = true
hex.workspace = true
hashbrown.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
tokio.workspace = true

[build-dependencies]
gmeta.workspace = true
mt-logic-io.workspace = true
gear-wasm-builder.workspace = true

[features]
binary-vendor = []
