[package]
name = "mt-main"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
mt-logic-io = { path = "../mt-logic/io" }
mt-main-io = { path = "io" }
primitive-types = { version = "0.12.1", default-features = false }
sp-core-hashing = { version = "5.0.0", default-features = false }
hashbrown = { version = "0.13.1" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }