[package]
name = "mt-main"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
mt-logic-io.workspace = true
mt-main-io.workspace = true
primitive-types.workspace = true
sp-core-hashing.workspace = true
hashbrown.workspace = true

[build-dependencies]
gmeta.workspace = true
mt-main-io.workspace = true
gear-wasm-builder.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gclient.workspace = true
blake2-rfc.workspace = true
tokio.workspace = true

[features]
binary-vendor = []
