[package]
name = "mt-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
mt-storage-io = { path = "io" }
primitive-types = { version = "0.12.1", default-features = false }
hashbrown = { version = "0.13.2" }

[build-dependencies]
mt-storage-io = { path = "io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }