[package]
name = "mt-logic-io"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
scale-info = { version = "2.3.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }
hashbrown = { version = "0.13.1" }
mt-storage-io = { path = "../../mt-storage/io" }