[package]
name = "mt-main-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
scale-info = { version = "2.3.0", default-features = false }
primitive-types = { version = "0.12.1", default-features = false }
mt-logic-io = { path = "../../mt-logic/io" }